fix phone size issues

--- a/blog.html
+++ b/blog.html
@@ -94,9 +94,11 @@
                             <!-- INTRO -->
                             <div class="row intro">
                                 <div class="col-md-12">
+                                    <!--
                                     <div class="fun_fact">
-                                        <p>Fun Fact??? Delete if jelek</p>
+                                        <p>Fun Fact??? Delete if jelek or not used</p>
                                     </div>
+                                    -->
                                     <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum quis mi quis fringilla. Mauris nulla orci, molestie sed tincidunt rutrum, vestibulum at dolor. Aliquam feugiat eget arcu nec eleifend. Maecenas vel nisi bibendum, pharetra libero et, hendrerit purus. Nunc non tortor velit. Pellentesque quis arcu non lectus euismod vulputate eu in turpis. Morbi nec massa eros. Maecenas elementum augue at congue viverra. Aenean in molestie diam.
     
@@ -115,21 +117,21 @@
                             <div class="row step">
                                 <div class="col-md-12">
                                     <div class="row steps">
-                                        <div class="col-md-9">
+                                        <div class="col-lg-9">
                                             <p>
                                                 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum quis mi quis fringilla. Mauris nulla orci, molestie sed tincidunt rutrum, vestibulum at dolor. Aliquam feugiat eget arcu nec eleifend. Maecenas vel nisi bibendum, pharetra libero et, hendrerit purus. Nunc non tortor velit. Pellentesque quis arcu non lectus euismod vulputate eu in turpis. Morbi nec massa eros. Maecenas elementum augue at congue viverra. Aenean in molestie diam. 
                                             </p>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-lg-3">
                                             <img src="media/blog/something.jpg" class="img-fluid">
                                         </div>
                                     </div>
 
                                     <div class="row steps">
-                                        <div class="col-md-3">
+                                        <div class="col-lg-3">
                                             <img src="media/blog/something.jpg" class="img-fluid left">
                                         </div>
-                                        <div class="col-md-9">
+                                        <div class="col-lg-9">
                                             <p>
                                                 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum quis mi quis fringilla. Mauris nulla orci, molestie sed tincidunt rutrum, vestibulum at dolor. Aliquam feugiat eget arcu nec eleifend. Maecenas vel nisi bibendum, pharetra libero et, hendrerit purus. Nunc non tortor velit. Pellentesque quis arcu non lectus euismod vulputate eu in turpis. Morbi nec massa eros. Maecenas elementum augue at congue viverra. Aenean in molestie diam. 
                                             </p>
@@ -137,21 +139,21 @@
                                     </div>
 
                                     <div class="row steps">
-                                        <div class="col-md-9">
+                                        <div class="col-lg-9">
                                             <p>
                                                 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum quis mi quis fringilla. Mauris nulla orci, molestie sed tincidunt rutrum, vestibulum at dolor. Aliquam feugiat eget arcu nec eleifend. Maecenas vel nisi bibendum, pharetra libero et, hendrerit purus. Nunc non tortor velit. Pellentesque quis arcu non lectus euismod vulputate eu in turpis. Morbi nec massa eros. Maecenas elementum augue at congue viverra. Aenean in molestie diam. 
                                             </p>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-lg-3">
                                             <img src="media/blog/something.jpg" class="img-fluid">
                                         </div>
                                     </div>
 
                                     <div class="row steps">
-                                        <div class="col-md-3">
+                                        <div class="col-lg-3">
                                             <img src="media/blog/something.jpg" class="img-fluid left">
                                         </div>
-                                        <div class="col-md-9">
+                                        <div class="col-lg-9">
                                             <p>
                                                 4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum quis mi quis fringilla. Mauris nulla orci, molestie sed tincidunt rutrum, vestibulum at dolor. Aliquam feugiat eget arcu nec eleifend. Maecenas vel nisi bibendum, pharetra libero et, hendrerit purus. Nunc non tortor velit. Pellentesque quis arcu non lectus euismod vulputate eu in turpis. Morbi nec massa eros. Maecenas elementum augue at congue viverra. Aenean in molestie diam. 
                                             </p>
