some changes on content

--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="row blog_title">
                             <div class="col-md-6">
-                                <img src="media/blog/put-image.png" class="img-fluid">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                             </div>
                             <div class="col-md-6 title_desc">
                                 <h1>The SSC - A Source of Students’ Confusions</h1>
@@ -84,7 +84,7 @@
 
                     <div class="row author">
                         <div class="col-md-12">
-                            <p>Written by: Kath</p>
+                            <p>Written by: Kathleen J</p>
                         </div>
                     </div>
 
@@ -106,7 +106,7 @@
                                 <div class="col-md-12">
                                     <h2>Can you share a fun fact about the SSC?</h2>
                                     <p>
-                                        SSC’s bi-annual crash! This usually happens before important dates such as registration and grades announcements. Wait it out for a few hours or keep on refreshing your laptop and it should be all good.
+                                        SSC’s <a href="https://www.reddit.com/r/UBC/comments/gaqwwr/biannual_ssc_crash_good_night_lads/" target="_blank" rel="noopener noreferrer">bi-annual</a> crash! This usually happens before important dates such as registration and grades announcements. Wait it out for a few hours or keep on refreshing your laptop and it should be all good.
                                     </p>
                                 </div>
                             </div>
@@ -120,21 +120,35 @@
                                             <p>
                                                 Firstly, familiarize yourself with the website by exploring its features. The SSC is so extensive that covering all of its information in this blog would take an eternity. Each category has a straightforward name, so you should be able to discover what you're looking for quickly.
                                                 <br> <br>
-                                                Let’s say you’re looking to see your tuition summary. You should head to Finance > Tuition History and click on a specific session (e.g. 2021W). If you’re curious to know when your exams are scheduled, you can click Exams > Exam Schedules. The same steps apply to housing, registration, grades, personal info, and more.
+                                                Let’s say you’re looking to see your tuition summary. You should head to Finance > Tuition History and click on a specific session (e.g. 2021W).
                                             </p>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <img src="media/blog/finance.png" class="img-fluid">
+                                            <img src="media/blog/1.png" class="img-fluid">
                                         </div>
                                         <div class="col-md-6">
-                                            <img src="media/blog/finance.png" class="img-fluid">
+                                            <img src="media/blog/2.png" class="img-fluid">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <p>A second tip is that there is zero shame in reaching out to your peers or your advisor for help. No question is a stupid question!</p>
+                                            <p>
+                                                If you’re curious to know when your exams are scheduled, you can click Exams > Exam Schedules. The same steps apply to housing, registration, grades, personal info, and more.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <img src="media/blog/3.png" class="img-fluid">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <p>
+                                                A second tip is that there is zero shame in reaching out to your peers or your advisor for help. No question is a stupid question!
+                                            </p>
                                         </div>
                                     </div>
 
@@ -264,5 +278,6 @@
             });
         });
     </script>
+    
 </html>
 
