--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
             <div class="container">
 
                 
-                <!-- HEADER -->
+                <!-- HEADER 
                 <div class="contain">
                     <div class="row header">
                         <div class="row blog_name">
@@ -78,6 +78,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                -->
+
+                <!-- BANNER -->
+                <div class="banner">
+                    <img src="media/blog/banner.jpeg" class="img-fluid">
                 </div>
                 
                 <div class="contain_2">
@@ -222,7 +228,7 @@
                                     <div class="row samples">
                                         <div class="col-md-12">
                                             <p>International Economics - Primo Huang</p>
-                                            <img src="media/blog/LFS JADE.jpeg" class="img-fluid">
+                                            <img src="media/blog/primo intl econ.jpeg" class="img-fluid">
                                         </div>
                                     </div>
 
