edit content & fix mobile size issues

--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
 					<!-- AUTHOR -->
                     <div class="row author">
                         <div class="col-md-12">
-							<img src="media/blog/rick.png" class="img-fluid">
+							<img src="media/blog/kath.jpeg" class="img-fluid">
                             <p>Written by:</p>
 							<p class="name">Kathleen Jeanne</p>
 							<p class="date">Last updated: June 23, 2021</p>
@@ -114,9 +114,8 @@
 					<div class="row intro">
 						<div class="col-md-12">
 							<p>
-								<i class="fas fa-quote-left"></i> As a UBC student, you’re more likely to check your SSC than hang out with your buddies. This blog will cover some basic SSC knowledge, provide sample semester schedules from current students, and gather all of the materials to assist you with course registration. <i class="fas fa-quote-right"></i>
+								As a UBC student, you’re more likely to check your SSC than hang out with your buddies. This blog will cover some basic SSC knowledge, provide sample semester schedules from current students, and gather all of the materials to assist you with course registration.
 							</p>
-							<p class="by_who">- Jeanneh</p>
 						</div>
 					</div>
 
@@ -338,33 +337,41 @@
 
 									<div class="row samples">
 										<div class="col-md-6">
-											<p>LFS - Jade Permata</p>
+											<p class="fac_name">LFS - Jade Permata</p>
+											<p><a href="https://www.instagram.com/jadepermata" target="_blank"
+											rel="noopener noreferrer">@jadepermata</a></p>
 											<img
 												src="media/blog/Jade.jpeg"
 												class="img-fluid"
 											/>
 										</div>
 										<div class="col-md-6">
-											<p>Russell Sumarno - Engineering</p>
-											<img
-												src="media/blog/Russ.jpeg"
-												class="img-fluid"
-											/>
-										</div>
-									</div>
-
-									<div class="row samples">
-										<div class="col-md-6">
-											<p>Eisen Gabrielle - Sauder</p>
+											<p class="fac_name">Sauder - Eisen Gabrielle</p>
+											<p><a href="https://www.instagram.com/eisengabrielle" target="_blank"
+												rel="noopener noreferrer">@eisengabrielle</a></p>
 											<img
 												src="media/blog/Eisen.jpeg"
 												class="img-fluid"
 											/>
 										</div>
+									</div>
+
+									<div class="row samples">
 										<div class="col-md-6">
-											<p>Julian Widjaja - Computer Science</p>
+											<p class="fac_name">Computer Science - Julian Widjaja</p>
+											<p><a href="https://www.instagram.com/julianw_21" target="_blank"
+												rel="noopener noreferrer">@julianw_21</a></p>
 											<img
 												src="media/blog/Julian.jpg"
+												class="img-fluid"
+											/>
+										</div>
+										<div class="col-md-6">
+											<p class="fac_name">Arts - Kathleen Jeanne Haryanto</p>
+											<p><a href="https://www.instagram.com/kathleenjeanneh" target="_blank"
+												rel="noopener noreferrer">@kathleenjeanneh</a></p>
+											<img
+												src="media/blog/Kathleen.jpg"
 												class="img-fluid"
 											/>
 										</div>
@@ -372,16 +379,20 @@
 
 									<div class="row samples">
 										<div class="col-md-6">
-											<p>Primo Huang - International Economics</p>
+											<p class="fac_name">International Economics - Primo Huang</p>
+											<p><a href="https://www.instagram.com/primo.huang" target="_blank"
+												rel="noopener noreferrer">@primo.huang</a></p>
 											<img
 												src="media/blog/Primo.jpg"
 												class="img-fluid"
 											/>
 										</div>
 										<div class="col-md-6">
-											<p>Kathleen Jeanne Haryanto - Arts</p>
+											<p class="fac_name">Engineering - Russell Sumarno</p>
+											<p><a href="https://www.instagram.com/russell.ws" target="_blank"
+												rel="noopener noreferrer">@russell.ws</a></p>
 											<img
-												src="media/blog/Kathleen.jpg"
+												src="media/blog/Russ.jpeg"
 												class="img-fluid"
 											/>
 										</div>
