--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="css/flickity.css" />
 		<script src="css/flickity.pkgd.js"></script>
 		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
 		<script src="css/googleanalytics.js"></script>
 		<!-- CSS -->
@@ -41,12 +41,8 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- BXSLIDER -->
-		<link
-			rel="stylesheet"
-			href="bxslider/bxslider-4-4.2.12/dist/jquery.bxslider.css"
-		/>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="bxslider/bxslider-4-4.2.12/dist/jquery.bxslider.min.js"></script>
+		<link rel="stylesheet" href="bxslider/jquery.bxslider.css" />
+		<script src="bxslider/jquery.bxslider.min.js"></script>
 		<!-- OWL CAROUSEL -->
 		<link
 			rel="stylesheet"
