--- a/blog.html
+++ b/blog.html
@@ -350,7 +350,7 @@
 											<p><a href="https://www.instagram.com/eisengabrielle" target="_blank"
 												rel="noopener noreferrer">@eisengabrielle</a></p>
 											<img
-												src="media/blog/Eisen.jpeg"
+												src="media/blog/Eisen.jpg"
 												class="img-fluid"
 											/>
 										</div>
@@ -392,7 +392,7 @@
 											<p><a href="https://www.instagram.com/russell.ws" target="_blank"
 												rel="noopener noreferrer">@russell.ws</a></p>
 											<img
-												src="media/blog/Russ.jpeg"
+												src="media/blog/Russ.jpg"
 												class="img-fluid"
 											/>
 										</div>
