add blog to navbar

--- a/blog.html
+++ b/blog.html
@@ -370,7 +370,7 @@
 												</a>
 											</p>
 											<img
-												src="media/blog/Eisen.jpg"
+												src="media/blog/Eisen.png"
 												class="img-fluid"
 											/>
 										</div>
@@ -410,7 +410,7 @@
 												</a>
 											</p>
 											<img
-												src="media/blog/Kathleen.jpg"
+												src="media/blog/Kathleen.png"
 												class="img-fluid"
 											/>
 										</div>
@@ -432,7 +432,7 @@
 												</a>
 											</p>
 											<img
-												src="media/blog/Primo.jpg"
+												src="media/blog/Primo.png"
 												class="img-fluid"
 											/>
 										</div>
