--- a/navbar.html
+++ b/navbar.html
@@ -67,6 +67,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="community.html">PARTNERSHIP</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="blog.html">BLOG</a>
+				</li>
 			</ul>
 		</div>
 	</div>
