--- a/recipe.html
+++ b/recipe.html
@@ -66,6 +66,7 @@
 				Pisang Goreng
 			</button>
 		</div>
+
 		<div id="tahu" class="tabcontent main-tab">
 			<h3>Tahu Goreng Perkedel</h3>
 			<img src="media/recipe-image/sample1.png" />
@@ -73,19 +74,19 @@
 				<div class="tab">
 					<button
 						class="defaultOpen tablinks ingredient-tab"
-						onclick="openPage(event, 'ingredient', 'ingredient-tab')"
+						onclick="openPage(event, 'ingredient-tahu', 'ingredient-tab')"
 					>
 						Ingredient
 					</button>
 					<button
 						class="tablinks ingredient-tab"
-						onclick="openPage(event, 'bahan', 'ingredient-tab')"
+						onclick="openPage(event, 'bahan-tahu', 'ingredient-tab')"
 					>
 						Bahan
 					</button>
 				</div>
 				<div class="ingredientcontainer">
-					<div id="ingredient" class="tabcontent ingredient-tab">
+					<div id="ingredient-tahu" class="tabcontent ingredient-tab">
 						<ul class="list-group">
 							<li class="list-group-item">3 soft tofu</li>
 							<li class="list-group-item">
@@ -104,7 +105,7 @@
 							<li class="list-group-item">vegetable oil</li>
 						</ul>
 					</div>
-					<div id="bahan" class="tabcontent ingredient-tab">
+					<div id="bahan-tahu" class="tabcontent ingredient-tab">
 						<ul class="list-group">
 							<li class="list-group-item">3 tahu</li>
 							<li class="list-group-item">
@@ -132,49 +133,48 @@
 			<div class="tab">
 				<button
 					class="defaultOpen tablinks ingredient-tab"
-					onclick="openPage(event, 'ingredient', 'ingredient-tab')"
+					onclick="openPage(event, 'ingredient-rice', 'ingredient-tab')"
 				>
 					Ingredient
 				</button>
 				<button
 					class="tablinks ingredient-tab"
-					onclick="openPage(event, 'bahan', 'ingredient-tab')"
+					onclick="openPage(event, 'bahan-rice', 'ingredient-tab')"
 				>
 					Bahan
 				</button>
 			</div>
 			<div class="ingredientcontainer">
-				<div id="ingredient" class="tabcontent ingredient-tab">
+				<div id="ingredient-rice" class="tabcontent ingredient-tab">
 					<ul class="list-group">
-						<li class="list-group-item">3 soft tofu</li>
-						<li class="list-group-item">3 garlic cloves, minced</li>
-						<li class="list-group-item">3 shallots, minced</li>
-						<li class="list-group-item">2 stems of scallions</li>
+						<li class="list-group-item">
+							400 grams of chilled rice
+						</li>
+						<li class="list-group-item">3 Tbsp vegetable oil</li>
+						<li class="list-group-item">150 grams fried chicken</li>
+						<li class="list-group-item">3 Tbsp sweet soy sauce</li>
 						<li class="list-group-item">2 eggs</li>
 						<li class="list-group-item">
-							mushroom powder, to taste
+							1 Tbsp chicken stock powder
 						</li>
-						<li class="list-group-item">salt, to taste</li>
-						<li class="list-group-item">pepper, to taste</li>
-						<li class="list-group-item">vegetable oil</li>
+						<li class="list-group-item">5 shallots</li>
+						<li class="list-group-item">3 cloves of garlic</li>
+						<li class="list-group-item">Salt to taste</li>
+						<li class="list-group-item">Pepper to taste</li>
 					</ul>
 				</div>
-				<div id="bahan" class="tabcontent ingredient-tab">
+				<div id="bahan-rice" class="tabcontent ingredient-tab">
 					<ul class="list-group">
-						<li class="list-group-item">3 tahu</li>
-						<li class="list-group-item">
-							3 bawang putih, dicincang
-						</li>
-						<li class="list-group-item">
-							3 bawang merah, dicincang
-						</li>
-						<li class="list-group-item">2 daun bawang</li>
+						<li class="list-group-item">400 gram nasi (dingin)</li>
+						<li class="list-group-item">3 sdm minyak sayur</li>
+						<li class="list-group-item">150 gram ayam</li>
+						<li class="list-group-item">3 Tbsp kecap manis</li>
 						<li class="list-group-item">2 telur</li>
-						<li class="list-group-item">2 sdm tepung</li>
-						<li class="list-group-item">bumbu jamur</li>
-						<li class="list-group-item">garam</li>
-						<li class="list-group-item">lada</li>
-						<li class="list-group-item">minyak goreng</li>
+						<li class="list-group-item">1 sdm bumbu ayam</li>
+						<li class="list-group-item">5 siung bawang merah</li>
+						<li class="list-group-item">3 siung bawang putih</li>
+						<li class="list-group-item">Garam</li>
+						<li class="list-group-item">Lada</li>
 					</ul>
 				</div>
 			</div>
@@ -184,49 +184,46 @@
 			<div class="tab">
 				<button
 					class="defaultOpen tablinks ingredient-tab"
-					onclick="openPage(event, 'ingredient', 'ingredient-tab')"
+					onclick="openPage(event, 'ingredient-pisang', 'ingredient-tab')"
 				>
 					Ingredient
 				</button>
 				<button
 					class="tablinks ingredient-tab"
-					onclick="openPage(event, 'bahan', 'ingredient-tab')"
+					onclick="openPage(event, 'bahan-pisang', 'ingredient-tab')"
 				>
 					Bahan
 				</button>
 			</div>
 			<div class="ingredientcontainer">
-				<div id="ingredient" class="tabcontent ingredient-tab">
+				<div id="ingredient-pisang" class="tabcontent ingredient-tab">
 					<ul class="list-group">
-						<li class="list-group-item">3 soft tofu</li>
-						<li class="list-group-item">3 garlic cloves, minced</li>
-						<li class="list-group-item">3 shallots, minced</li>
-						<li class="list-group-item">2 stems of scallions</li>
-						<li class="list-group-item">2 eggs</li>
 						<li class="list-group-item">
-							mushroom powder, to taste
+							8 ripe saba bananas or raja bananas
 						</li>
-						<li class="list-group-item">salt, to taste</li>
-						<li class="list-group-item">pepper, to taste</li>
-						<li class="list-group-item">vegetable oil</li>
+						<li class="list-group-item">100 grams rice flour</li>
+						<li class="list-group-item">1.5 tsp baking soda</li>
+						<li class="list-group-item">1.5 tsp baking powder</li>
+						<li class="list-group-item">2 tsp sugar</li>
+						<li class="list-group-item">0.5 tsp salt</li>
+						<li class="list-group-item">Water</li>
+						<li class="list-group-item">Oil</li>
 					</ul>
 				</div>
-				<div id="bahan" class="tabcontent ingredient-tab">
+				<div id="bahan-pisang" class="tabcontent ingredient-tab">
 					<ul class="list-group">
-						<li class="list-group-item">3 tahu</li>
 						<li class="list-group-item">
-							3 bawang putih, dicincang
+							8 pisang kepok atau pisang raja
 						</li>
+						<li class="list-group-item">100 gram tepung beras</li>
+						<li class="list-group-item">1.5 sdt soda kue</li>
 						<li class="list-group-item">
-							3 bawang merah, dicincang
+							1.5 sdt bubuk pengembang
 						</li>
-						<li class="list-group-item">2 daun bawang</li>
-						<li class="list-group-item">2 telur</li>
-						<li class="list-group-item">2 sdm tepung</li>
-						<li class="list-group-item">bumbu jamur</li>
-						<li class="list-group-item">garam</li>
-						<li class="list-group-item">lada</li>
-						<li class="list-group-item">minyak goreng</li>
+						<li class="list-group-item">2 sdt gula</li>
+						<li class="list-group-item">0.5 sdt garam</li>
+						<li class="list-group-item">Air</li>
+						<li class="list-group-item">Minyak goreng</li>
 					</ul>
 				</div>
 			</div>
@@ -252,7 +249,7 @@
 				const content = document.getElementById(tabName);
 				content.style.display = 'block';
 				evt.currentTarget.className += ' active';
-				content.getElementsByClassName('defaultOpen').click();
+				content.getElementsByClassName('defaultOpen')[0].click();
 			}
 			const arr = document
 				.getElementsByClassName('defaultOpen')[0]
