--- a/recipe.html
+++ b/recipe.html
@@ -15,7 +15,6 @@
 			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
 			crossorigin="anonymous"
 		/>
-		<!--BOOTSTRAP-->
 		<link rel="shortcut icon" href="media/favicon.png" />
 		<!--CAROUSEL-->
 		<link rel="stylesheet" href="css/flickity.css" />
@@ -37,6 +36,10 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://kit.fontawesome.com/e3e202619d.js"
 			crossorigin="anonymous"
 		></script>
 	</head>
@@ -69,7 +72,33 @@
 
 		<div id="tahu" class="tabcontent main-tab">
 			<h3>Tahu Goreng Perkedel</h3>
-			<img src="media/recipe-image/sample1.png" />
+			<div>
+				Difficulty:
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
+			</div>
+			<div>
+				Spiciness:
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+			</div>
+			<div class="food-image-container">
+				<img class="food-image" src="media/recipe-image/tahu.jpeg" />
+			</div>
+			<div class="description mb-3 mx-lg-5">
+				When in need of a savory snack or a side dish for your meal
+				time, Tahu Goreng Perkedel can be your go to menu. It’s easy to
+				make using the staples in your kitchen! The crispy outside from
+				eggs and flour with the soft inside from the tofu will make you
+				want more!
+			</div>
+
 			<div class="ingredient-container">
 				<div class="tab">
 					<button
@@ -85,66 +114,138 @@
 						Bahan
 					</button>
 				</div>
-				<div class="ingredientcontainer">
-					<div id="ingredient-tahu" class="tabcontent ingredient-tab">
-						<ul class="list-group">
-							<li class="list-group-item">3 soft tofu</li>
-							<li class="list-group-item">
-								3 garlic cloves, minced
-							</li>
-							<li class="list-group-item">3 shallots, minced</li>
-							<li class="list-group-item">
-								2 stems of scallions
-							</li>
-							<li class="list-group-item">2 eggs</li>
-							<li class="list-group-item">
-								mushroom powder, to taste
-							</li>
-							<li class="list-group-item">salt, to taste</li>
-							<li class="list-group-item">pepper, to taste</li>
-							<li class="list-group-item">vegetable oil</li>
-						</ul>
-					</div>
-					<div id="bahan-tahu" class="tabcontent ingredient-tab">
-						<ul class="list-group">
-							<li class="list-group-item">3 tahu</li>
-							<li class="list-group-item">
-								3 bawang putih, dicincang
-							</li>
-							<li class="list-group-item">
-								3 bawang merah, dicincang
-							</li>
-							<li class="list-group-item">2 daun bawang</li>
-							<li class="list-group-item">2 telur</li>
-							<li class="list-group-item">2 sdm tepung</li>
-							<li class="list-group-item">bumbu jamur</li>
-							<li class="list-group-item">garam</li>
-							<li class="list-group-item">lada</li>
-							<li class="list-group-item">minyak goreng</li>
-						</ul>
-					</div>
+				<div id="ingredient-tahu" class="tabcontent ingredient-tab">
+					<ul class="list-group">
+						<li class="list-group-item">3 soft tofu</li>
+						<li class="list-group-item">3 garlic cloves, minced</li>
+						<li class="list-group-item">3 shallots, minced</li>
+						<li class="list-group-item">2 stems of scallions</li>
+						<li class="list-group-item">2 eggs</li>
+						<li class="list-group-item">
+							mushroom powder, to taste
+						</li>
+						<li class="list-group-item">salt, to taste</li>
+						<li class="list-group-item">pepper, to taste</li>
+						<li class="list-group-item">vegetable oil</li>
+					</ul>
 				</div>
+				<div id="bahan-tahu" class="tabcontent ingredient-tab">
+					<ul class="list-group">
+						<li class="list-group-item">3 tahu</li>
+						<li class="list-group-item">
+							3 bawang putih, dicincang
+						</li>
+						<li class="list-group-item">
+							3 bawang merah, dicincang
+						</li>
+						<li class="list-group-item">2 daun bawang</li>
+						<li class="list-group-item">2 telur</li>
+						<li class="list-group-item">2 sdm tepung</li>
+						<li class="list-group-item">bumbu jamur</li>
+						<li class="list-group-item">garam</li>
+						<li class="list-group-item">lada</li>
+						<li class="list-group-item">minyak goreng</li>
+					</ul>
+				</div>
+			</div>
+			<div class="instructions my-3 mx-lg-5">
+				<h3>Instructions</h3>
+				<ul class="fa-ul mb-3 mx-lg-5">
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Using a spoon, break down the tofu into smaller pieces.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Heat up the oil.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Mince all the garlic, shallots and scallions and combine
+						them with the tofu into the bowl.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Add 2 tbsp of flour, 2 eggs, salt, pepper and mushroom
+						powder to taste in the bowl, mix.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Using a spoon, scoop out the mixture and deep fry them.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Flip them when they turn brown and remove tofu and drain
+						on a wire rack to remove excess oil.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Serve with hot rice and sweet soy sauce!
+					</li>
+				</ul>
 			</div>
 		</div>
 
 		<div id="rice" class="tabcontent main-tab">
-			<h3>Tahu Goreng Perkedel</h3>
-			<img src="media/recipe-image/june-fried-rice.png" />
-			<div class="tab">
-				<button
-					class="defaultOpen tablinks ingredient-tab"
-					onclick="openPage(event, 'ingredient-rice', 'ingredient-tab')"
-				>
-					Ingredient
-				</button>
-				<button
-					class="tablinks ingredient-tab"
-					onclick="openPage(event, 'bahan-rice', 'ingredient-tab')"
-				>
-					Bahan
-				</button>
+			<h3>Indonesian Fried Rice</h3>
+			<div>
+				Difficulty:
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
 			</div>
-			<div class="ingredientcontainer">
+			<div>
+				Spiciness:
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+			</div>
+			<div class="food-image-container">
+				<img
+					class="food-image"
+					src="media/recipe-image/Nasi Goreng.jpg"
+				/>
+			</div>
+			<div class="description mb-3 mx-lg-5">
+				The best food for when you are home sick! There are various ways
+				on how to make Nasi Goreng, I know that every family has their
+				own twist and recipes for this simple yet delicious dish! Here
+				are the ingredients and the recipe for our take on Nasi Goreng.
+			</div>
+
+			<div class="ingredient-container">
+				<div class="tab">
+					<button
+						class="defaultOpen tablinks ingredient-tab"
+						onclick="openPage(event, 'ingredient-rice', 'ingredient-tab')"
+					>
+						Ingredient
+					</button>
+					<button
+						class="tablinks ingredient-tab"
+						onclick="openPage(event, 'bahan-rice', 'ingredient-tab')"
+					>
+						Bahan
+					</button>
+				</div>
 				<div id="ingredient-rice" class="tabcontent ingredient-tab">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -178,24 +279,92 @@
 					</ul>
 				</div>
 			</div>
+			<div class="instructions my-3 mx-lg-5">
+				<h3>Instructions</h3>
+				<ul class="fa-ul mb-3 mx-lg-5">
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Grind shallots, garlic, chilli, shrimp paste and salt r
+						to a food processor until smooth using a food processor.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Add oil to a pan and heat it up on high heat. Once hot,
+						add the blended ingredients and stir fry until fragrant.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Add beaten eggs and mix everything.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Add rice, shredded fried chicken, sweet soy sauce,
+						chicken stock powder and white pepper. Mix everything
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Optional: Cook up and serve with one sunny side up egg
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<div id="pisang" class="tabcontent main-tab">
-			<div class="tab">
-				<button
-					class="defaultOpen tablinks ingredient-tab"
-					onclick="openPage(event, 'ingredient-pisang', 'ingredient-tab')"
-				>
-					Ingredient
-				</button>
-				<button
-					class="tablinks ingredient-tab"
-					onclick="openPage(event, 'bahan-pisang', 'ingredient-tab')"
-				>
-					Bahan
-				</button>
+			<h3>Pisang Goreng</h3>
+			<div>
+				Difficulty:
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
 			</div>
-			<div class="ingredientcontainer">
+			<div>
+				Spiciness:
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+				<span class="fa fa-pepper-hot"></span>
+			</div>
+			<div class="food-image-container">
+				<img
+					class="food-image"
+					src="media/recipe-image/Pisang Goreng.jpeg"
+				/>
+			</div>
+			<div class="description mb-3 mx-lg-5">
+				Pisang goreng, sweet and crispy when it is done right! Getting
+				the right bananas for this dish in Vancouver might not be easy,
+				but when craving for some, we try to make it work! The perfect
+				companion for your me time.
+			</div>
+
+			<div class="ingredient-container">
+				<div class="tab">
+					<button
+						class="defaultOpen tablinks ingredient-tab"
+						onclick="openPage(event, 'ingredient-pisang', 'ingredient-tab')"
+					>
+						Ingredient
+					</button>
+					<button
+						class="tablinks ingredient-tab"
+						onclick="openPage(event, 'bahan-pisang', 'ingredient-tab')"
+					>
+						Bahan
+					</button>
+				</div>
 				<div id="ingredient-pisang" class="tabcontent ingredient-tab">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -227,6 +396,59 @@
 					</ul>
 				</div>
 			</div>
+			<div class="instructions my-3 mx-lg-5">
+				<h3>Instructions</h3>
+				<ul class="fa-ul mb-3 mx-lg-5">
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Peel all the bananas. Optionally, make three slits along
+						its length (but two will also be enough), but keep the
+						bottom 1 inch intact, so the bananas can be opened up
+						like a fan.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						In a separate bowl add in all the rice flour, baking
+						soda, baking powder, sugar and mix everything
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Once the oil is hot (you will see bubbles), scoop 1
+						tablespoon of hot oil and add to the batter, whisk
+						again.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Coat the bananas with batter and deep-fry until golden
+						brown and crispy, about 3-4 minutes.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						At around 2 minutes into frying, drop batter in drips
+						into the hot oil to make plenty of batter droplets, then
+						quickly coat the bananas with the resulting crispy bits.
+						This creates an additional layer to ensure your
+						resulting pisang goreng stays crispy for longer.
+					</li>
+					<li>
+						<span class="fa-li">
+							<i class="fas fa-arrow-right"></i>
+						</span>
+						Remove bananas and drain on a wire rack to remove excess
+						oil. Pisang goreng is best when served immediately.
+					</li>
+				</ul>
+			</div>
 		</div>
 		<script>
 			function openPage(evt, tabName, tabGroup) {
@@ -249,7 +471,10 @@
 				const content = document.getElementById(tabName);
 				content.style.display = 'block';
 				evt.currentTarget.className += ' active';
-				content.getElementsByClassName('defaultOpen')[0].click();
+				const child = content.getElementsByClassName('defaultOpen');
+				if (child.length) {
+					child[0].click();
+				}
 			}
 			const arr = document
 				.getElementsByClassName('defaultOpen')[0]
