some style changes

--- a/recipe.html
+++ b/recipe.html
@@ -48,7 +48,7 @@
 		<div id="nav-placeholder"></div>
 		<!-- navbar -->
 		<!-- copy everything above this to create new page  -->
-		<div class="title">June Recipe</div>
+		<h1 class="title">June Recipe</h1>
 		<div class="tab">
 			<button
 				class="defaultOpen tablinks main-tab"
