changed instructions to ordered

--- a/recipe.html
+++ b/recipe.html
@@ -91,7 +91,7 @@
 			<div class="food-image-container">
 				<img class="food-image" src="media/recipe-image/tahu.jpeg" />
 			</div>
-			<div class="description mb-3 mx-lg-5">
+			<div class="description mb-5 mx-lg-5">
 				When in need of a savory snack or a side dish for your meal
 				time, Tahu Goreng Perkedel can be your go to menu. It’s easy to
 				make using the staples in your kitchen! The crispy outside from
@@ -105,7 +105,7 @@
 						class="defaultOpen tablinks ingredient-tab"
 						onclick="openPage(event, 'ingredient-tahu', 'ingredient-tab')"
 					>
-						Ingredient
+						Ingredients
 					</button>
 					<button
 						class="tablinks ingredient-tab"
@@ -150,53 +150,28 @@
 			</div>
 			<div class="instructions my-3 mx-lg-5">
 				<h3>Instructions</h3>
-				<ul class="fa-ul mb-3 mx-lg-5">
+				<ol class="mb-3 mx-lg-3">
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Using a spoon, break down the tofu into smaller pieces.
 					</li>
+					<li>Heat up the oil.</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
-						Heat up the oil.
-					</li>
-					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Mince all the garlic, shallots and scallions and combine
 						them with the tofu into the bowl.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Add 2 tbsp of flour, 2 eggs, salt, pepper and mushroom
 						powder to taste in the bowl, mix.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Using a spoon, scoop out the mixture and deep fry them.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Flip them when they turn brown and remove tofu and drain
 						on a wire rack to remove excess oil.
 					</li>
-					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
-						Serve with hot rice and sweet soy sauce!
-					</li>
-				</ul>
+					<li>Serve with hot rice and sweet soy sauce!</li>
+				</ol>
 			</div>
 		</div>
 
@@ -224,7 +199,7 @@
 					src="media/recipe-image/Nasi Goreng.jpg"
 				/>
 			</div>
-			<div class="description mb-3 mx-lg-5">
+			<div class="description mb-5 mx-lg-5">
 				The best food for when you are home sick! There are various ways
 				on how to make Nasi Goreng, I know that every family has their
 				own twist and recipes for this simple yet delicious dish! Here
@@ -237,7 +212,7 @@
 						class="defaultOpen tablinks ingredient-tab"
 						onclick="openPage(event, 'ingredient-rice', 'ingredient-tab')"
 					>
-						Ingredient
+						Ingredients
 					</button>
 					<button
 						class="tablinks ingredient-tab"
@@ -281,41 +256,24 @@
 			</div>
 			<div class="instructions my-3 mx-lg-5">
 				<h3>Instructions</h3>
-				<ul class="fa-ul mb-3 mx-lg-5">
+				<ol class="mb-3 mx-lg-5">
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Grind shallots, garlic, chilli, shrimp paste and salt r
 						to a food processor until smooth using a food processor.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Add oil to a pan and heat it up on high heat. Once hot,
 						add the blended ingredients and stir fry until fragrant.
 					</li>
+					<li>Add beaten eggs and mix everything.</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
-						Add beaten eggs and mix everything.
-					</li>
-					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Add rice, shredded fried chicken, sweet soy sauce,
 						chicken stock powder and white pepper. Mix everything
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Optional: Cook up and serve with one sunny side up egg
 					</li>
-				</ul>
+				</ol>
 			</div>
 		</div>
 
@@ -343,7 +301,7 @@
 					src="media/recipe-image/Pisang Goreng.jpeg"
 				/>
 			</div>
-			<div class="description mb-3 mx-lg-5">
+			<div class="description mb-5 mx-lg-5">
 				Pisang goreng, sweet and crispy when it is done right! Getting
 				the right bananas for this dish in Vancouver might not be easy,
 				but when craving for some, we try to make it work! The perfect
@@ -356,7 +314,7 @@
 						class="defaultOpen tablinks ingredient-tab"
 						onclick="openPage(event, 'ingredient-pisang', 'ingredient-tab')"
 					>
-						Ingredient
+						Ingredients
 					</button>
 					<button
 						class="tablinks ingredient-tab"
@@ -398,42 +356,27 @@
 			</div>
 			<div class="instructions my-3 mx-lg-5">
 				<h3>Instructions</h3>
-				<ul class="fa-ul mb-3 mx-lg-5">
+				<ol class="mb-3 mx-lg-5">
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Peel all the bananas. Optionally, make three slits along
 						its length (but two will also be enough), but keep the
 						bottom 1 inch intact, so the bananas can be opened up
 						like a fan.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						In a separate bowl add in all the rice flour, baking
 						soda, baking powder, sugar and mix everything
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Once the oil is hot (you will see bubbles), scoop 1
 						tablespoon of hot oil and add to the batter, whisk
 						again.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Coat the bananas with batter and deep-fry until golden
 						brown and crispy, about 3-4 minutes.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						At around 2 minutes into frying, drop batter in drips
 						into the hot oil to make plenty of batter droplets, then
 						quickly coat the bananas with the resulting crispy bits.
@@ -441,13 +384,10 @@
 						resulting pisang goreng stays crispy for longer.
 					</li>
 					<li>
-						<span class="fa-li">
-							<i class="fas fa-arrow-right"></i>
-						</span>
 						Remove bananas and drain on a wire rack to remove excess
 						oil. Pisang goreng is best when served immediately.
 					</li>
-				</ul>
+				</ol>
 			</div>
 		</div>
 		<script>
