fixed cara membuat typo

--- a/recipe.html
+++ b/recipe.html
@@ -160,7 +160,7 @@
 						class="tablinks instructions-tab"
 						onclick="openPage(event, 'cara-tahu', 'instructions-tab')"
 					>
-						Cara membuat:
+						Cara membuat
 					</button>
 				</div>
 				<div id="instructions-tahu" class="tabcontent instructions-tab">
@@ -337,7 +337,7 @@
 						class="tablinks instructions-tab"
 						onclick="openPage(event, 'cara-rice', 'instructions-tab')"
 					>
-						Cara membuat:
+						Cara membuat
 					</button>
 				</div>
 
@@ -497,7 +497,7 @@
 						class="tablinks instructions-tab"
 						onclick="openPage(event, 'cara-pisang', 'instructions-tab')"
 					>
-						Cara membuat:
+						Cara membuat
 					</button>
 				</div>
 
