--- a/recipe.html
+++ b/recipe.html
@@ -93,8 +93,6 @@
 			</div>
 			<div class="food-image-container">
 				<iframe
-					width="560"
-					height="315"
 					src="https://www.youtube-nocookie.com/embed/LuLl_q3KzU0"
 					title="YouTube video player"
 					frameborder="0"
@@ -102,7 +100,7 @@
 					allowfullscreen
 				></iframe>
 			</div>
-			<div class="description mb-5 mx-lg-5">
+			<div class="description">
 				When in need of a savory snack or a side dish for your meal
 				time, Tahu Goreng Perkedel can be your go-to meal. It’s easy to
 				make using the staples in your kitchen. The crispy coating from
@@ -156,7 +154,7 @@
 				</div>
 			</div>
 
-			<div class="instructions-container my-3 mx-lg-5">
+			<div class="instructions-container">
 				<div class="tab">
 					<button
 						class="defaultOpen tablinks instructions-tab"
@@ -333,7 +331,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="instructions-container my-3 mx-lg-5">
+			<div class="instructions-container">
 				<div class="tab">
 					<button
 						class="defaultOpen tablinks instructions-tab"
@@ -493,7 +491,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="instructions-container my-3 mx-lg-5">
+			<div class="instructions-container">
 				<div class="tab">
 					<button
 						class="defaultOpen tablinks instructions-tab"
